Fixed overflow in description.

--- a/src/App.css
+++ b/src/App.css
@@ -117,7 +117,7 @@ input[type="number"] {
   font-style: italic;
 }
 
-.description {
+.event-description {
   overflow-x: hidden;
 }
 
